src/test/deca/context/valid/sansObj/assign-compatible-bool-cond.deca
// Description:
//    Affectation d'une condition à un booléen
//
// Résultat:
//    Succès
//
{
    boolean a;
    int b = 23;
    a = (b == 23);
}