src/test/deca/context/invalid/sansObj/decl-void.deca
// Description:
//    Déclaration d'une variable de type void
//
// Résultat:
//can't define a void
//
{
   void a;
   boolean b;
   a = a + b;
}